# semver

./: .gitignore  .semver.json  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  action.yml  entrypoint.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security-issue.md
.github/workflows/: codeql.yml  rust.yml
.github/workspaces/: build.yaml
src/: main.rs
src/feature/: mod.rs  retrieval.rs  tagging.rs
src/feature/release/: github.rs  mod.rs
src/lib/: data.rs  mod.rs  version.rs
src/libs/: data.rs  mod.rs  release.rs  version.rs
